# wpengine-cli

./: CNAME  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: rust.yml
localwp-ui/: Cargo.toml
src/: accounts.rs  api.rs  auth.rs  build.rs  installs.rs  lib.rs  main.rs  sites.rs  ssh.rs  users.rs
src/accounts/: mod.rs
src/sites/: mod.rs
workflows/: rust.yml
wpe-cli/: Cargo.toml
wpe-cli/src/: lib.rs  main.rs
wpe-cli/src/accounts/: mod.rs
wpe-cli/src/installs/: mod.rs
wpe-cli/src/sites/: mod.rs
wpe-cli/src/ssh/: mod.rs
wpe-local/: README.md
wpe-local/frontend/: package-lock.json  package.json
wpe-local/frontend/src/pages/: index.tsx
wpengine-cli/: Cargo.toml
wpengine-ui/: Cargo.toml  tauri.conf.json
