[package]
name = "wpengine_cli_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home-config = { version = "0.6.0", features = ["json", "yaml", "toml", "hcl"] }
serde = "1.0"
serde_json = "1.0"
regex = "1"
reqwest = { version = "0.11.13", features= ["blocking", "json"]}