[package]
name = "wpe"
version = "0.1.0"
edition = "2021"

[lib]
name = "wpe"

[dependencies]
home-config = { version = "0.6.0", features = ["json", "yaml", "toml", "hcl"] }
serde = "1.0"
serde_json = "1.0"
regex = "1"
reqwest = { version = "0.11.13", features= ["blocking", "json"]}
clap = { version = "4.0.27", features = ["derive"] }
dialoguer = "0.10.2"

